change style of image

--- a/base1.html
+++ b/base1.html
@@ -17,14 +17,14 @@
 	#contents1 {width:70%; vertical-align: middle; font-size: 10px;height:auto; box-sizing:border-box;float:left; display:inline-block;}
     #contents2 {
       width:30%; height:auto;
-      border:1px solid border-color:lightgrey;
-	  box-sizing:border-box;
-	  float:left; display:inline-block;
-    align:center;
+      border:1px solid lightgrey;
+      box-sizing:border-box;
+      float:left; display:inline-block;
+      align:center;
     }
     #contents2 h3 {float:left;}
 
-    #map {overflow: hidden; border: 1px solid border-color:lightgrey;}
+    #map {overflow: hidden; border: 1px solid lightgrey;}
     #map div {float: left;}
     #img {overflow: hidden;}
     #img div {float:left}
@@ -98,15 +98,15 @@
 
 		<h3>기초 관련 이미지</h3>
 		<div id="img">
-			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px; src="file:///Users/kwondajeong/Documents/과외/img1.png"></div>
-			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px; src="file:///Users/kwondajeong/Documents/과외/img2.png"></div>
-			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px; src="file:///Users/kwondajeong/Documents/과외/img3.png"></div>
-			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px; src="file:///Users/kwondajeong/Documents/과외/img4.png"></div>
-			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px; src="file:///Users/kwondajeong/Documents/과외/img5.png"></div>
+			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px;" src="./img1.png"></div>
+			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px;" src="./img2.png"></div>
+			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px;" src="./img3.png"></div>
+			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px;" src="./img4.png"></div>
+			<div style="width:150px; height:120px; margin-right: 1px; border:1px solid; border-color:lightgrey; display: inline-block;"><img style="width:150px; height:120px;" src="./img5.png"></div>
       <br>
 			<a href="#none">기초에 대한 이미지 더보기</a>
 			<a href="#none">이미지신고</a>
-		</div></br>
+		</div><br>
 
 		<h3><a href="#none">한국어기초사전</a></h3>
 		<p><a href="#none">https://krdict.korean.go.kr/</a></p>
