--- a/src/base1.html
+++ b/src/base1.html
@@ -9,25 +9,33 @@
 <body>
   <header>
     <form class="search-form">
-      <img style="margin-top:5px; width:120px; height:40px;" src="assets/images/logo.png">
-      <input style="width: 600px; height:40px; font-size:20px;" type="search">
-      <input type='button' value="입력도구">
-      <input type='button' value="음성검색">
-      <input type='button' value="검색">
-      <input style="float:right;" type='button' value="로그인">
-      <img style="float:right;" src="assets/images/m.png">
+			<div class="logo">
+				<img src="assets/images/logo.png">
+			</div>
+			<input class="search-input" type="text">
+			<div class="search-items">
+				<input type='button' value="입력도구">
+				<input type='button' value="음성검색">
+				<input type='button' value="검색">
+			</div>
+				<input style="float:right;" type='button' value="로그인">
+				<img style="float:right;" src="assets/images/m.png">
 		</form><!-- search-form-->
 
-    <div id="nav">
-		<li><a href="#none">전체</a></li>
-		<li><a href="#none">이미지</a></li>
-		<li><a href="#none">동영상</a></li>
-		<li><a href="#none">뉴스</a></li>
-		<li><a href="#none">지도</a></li>
-		<li><a href="#none">더보기</a></li>
-		<li><a href="#none">설정</a></li>
-		<li><a href="#none">도구</a></li>
-    </div><!-- nav -->
+    <nav>
+			<div>
+				<li><a href="#none">전체</a></li>
+				<li><a href="#none">이미지</a></li>
+				<li><a href="#none">동영상</a></li>
+				<li><a href="#none">뉴스</a></li>
+				<li><a href="#none">지도</a></li>
+				<li><a href="#none">더보기</a></li>
+			</div>
+			<div>
+				<li><a href="#none">설정</a></li>
+				<li><a href="#none">도구</a></li>
+			</div>
+    </nav><!-- nav -->
   </header><!-- header -->
 
 <div id="wrap">
