--- a/src/base1.html
+++ b/src/base1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -45,32 +44,32 @@
 
 		<div>
 			<h3><a href="#none">기초 - 위키낱말사전</a></h3>
-			<p><a href="#none">https://ko.wiktionary.org/wiki/기초</a></br></p>
+			<p><a href="#none" style="color:green;">https://ko.wiktionary.org/wiki/기초</a></br></p>
 			<p>명사[편집]. 명사 1[편집]. 어원: 한자 基礎; 1. 무엇의 바탕이 되는 것. 한국에서 쓰이는 기초 한자. 한국의 자연 과학 연구는 기초가 튼튼하지 못하다. 유의어: 바탕, 토대 ...</p>
 			<p><a href="#none">한국어</a>.<a href="#none">명사</a></p>
-		</div>
+		</div></br>
 
 		<div>
 			<h3><a href="#none">기초 - 위키백과, 우리 모두의 백과사전</a></h3>
-			<p><a href="#none">https://ko.wikipedia.org/wiki/기초</a></p>
+			<p><a href="#none" style="color:green;">https://ko.wikipedia.org/wiki/기초</a></p>
 			<p>기초(基礎, 영어: foundation)는 구조물에서 힘을 지반으로 전달하여 구조물을 안전하게 지탱하는 기능을 가진 구조를 말한다. 다른 용어로는 하부구조(下部構造) ...</p>
 			<p><a href="#none">분류</a>.<a href="#none">전지압</a>.<a href="#none">직접 기초</a>.<a href="#none">깊은 기초</a></p>
 		</div></br>
 
 		<div>
 			<h3><a href="#none">기초공학 - 위키백과, 우리 모두의 백과사전</a></h3>
-			<p><a href="#none">https://ko.wikipedia.org/wiki/기초공학</a></br></p>
+			<p><a href="#none" style="color:green;">https://ko.wikipedia.org/wiki/기초공학</a></br></p>
 			<p>기초 공학(Foundation Engineering)은 토목공학의 하위 분야로써, 토질역학의 원리를 활용하여 제반 구조물의 하중을 지반에 전달하는 하부 구조인 기초를 설계하는 ...</p>
 		</div></br>
 
 		<h3>기초 관련 이미지</h3>
 		<div id="img">
 			<ul>
-				<li><img style="width:150px; height:120px;" src="assets/images/img1.png"></li>
-				<li><img style="width:150px; height:120px;" src="assets/images/img2.png"></li>
-				<li><img style="width:150px; height:120px;" src="assets/images/img3.png"></li>
-				<li><img style="width:150px; height:120px;" src="assets/images/img4.png"></li>
-				<li><img style="width:150px; height:120px;" src="assets/images/img5.png"></li>
+				<li><img src="assets/images/img1.png"></li>
+				<li><img src="assets/images/img2.png"></li>
+				<li><img src="assets/images/img3.png"></li>
+				<li><img src="assets/images/img4.png"></li>
+				<li><img src="assets/images/img5.png"></li>
 			</ul>
 			<br>
 			
@@ -85,19 +84,19 @@
 		<h3>동영상</h3>
 		<div id="video">
 			<div class="video1" style="margin-right: 1px; border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:230px; height:auto;" src="assets/images/v1.png"></div>
+			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v1.png"></div>
 			  <div style="width:100%; height:auto;">[황세준 탁구클럽]#포핸드 드라이브 기초- 1. 기본 자세 및 하체</div>
 			  <div style="width:100%; height:auto;">Kendra's Language School<br><span style="color:green">YouTube</span> - 2018. 9. 10.</div>
 			</div>
 
 			<div class="video2" style="margin-right: 1px; border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:230px; height:auto;" src="assets/images/v2.png"></div>
+			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v2.png"></div>
 			  <div style="width:100%; height:auto;">기초대사량 늘리는 간단한 운동법! [내 몸 사용설명서] 199회 20180407</div>
 			  <div style="width:100%; height:auto;">TVCHOSUN<br><span style="color:green">YouTube</span> - 2018. 4. 7.</div>
 			</div>
 
 			<div class="video3" style="border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:230px ; height:auto;" src="assets/images/v3.png"></div>
+			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v3.png"></div>
 			  <div style="width:100%; height:auto;">집 일상 사용하는 아주 간단한 기초 영어회화 딱 80개</div>
 			  <div style="width:100%; height:auto;">JTBC Entertainment<br><span style="color:green">YouTube</span> - 2014. 8. 13.</div>
 			</div>
