--- a/src/base1.html
+++ b/src/base1.html
@@ -83,22 +83,22 @@
 
 		<h3>동영상</h3>
 		<div id="video">
-			<div class="video1" style="margin-right: 1px; border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v1.png"></div>
-			  <div style="width:100%; height:auto;">[황세준 탁구클럽]#포핸드 드라이브 기초- 1. 기본 자세 및 하체</div>
-			  <div style="width:100%; height:auto;">Kendra's Language School<br><span style="color:green">YouTube</span> - 2018. 9. 10.</div>
+			<div class="video1">
+			  <div class="v1"><img style="width:197px; height:112px;" src="assets/images/v1.png"></div>
+			  <div class="v2">[황세준 탁구클럽]#포핸드 드라이브 기초- 1. 기본 자세 및 하체</div>
+			  <div class="v2">Kendra's Language School<br><span style="color:green">YouTube</span> - 2018. 9. 10.</div>
 			</div>
 
-			<div class="video2" style="margin-right: 1px; border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v2.png"></div>
-			  <div style="width:100%; height:auto;">기초대사량 늘리는 간단한 운동법! [내 몸 사용설명서] 199회 20180407</div>
-			  <div style="width:100%; height:auto;">TVCHOSUN<br><span style="color:green">YouTube</span> - 2018. 4. 7.</div>
+			<div class="video1">
+			  <div class="v1"><img style="width:197px; height:112px;" src="assets/images/v2.png"></div>
+			  <div class="v2">기초대사량 늘리는 간단한 운동법! [내 몸 사용설명서] 199회 20180407</div>
+			  <div class="v2">TVCHOSUN<br><span style="color:green">YouTube</span> - 2018. 4. 7.</div>
 			</div>
 
-			<div class="video3" style="border:1px solid; border-color:lightgrey;">
-			  <div style="width:30%; height:auto;"><img style="width:197px; height:112px;" src="assets/images/v3.png"></div>
-			  <div style="width:100%; height:auto;">집 일상 사용하는 아주 간단한 기초 영어회화 딱 80개</div>
-			  <div style="width:100%; height:auto;">JTBC Entertainment<br><span style="color:green">YouTube</span> - 2014. 8. 13.</div>
+			<div class="video2" >
+			  <div ><img style="width:197px; height:112px;" src="assets/images/v3.png"></div>
+			  <div >집 일상 사용하는 아주 간단한 기초 영어회화 딱 80개</div>
+			  <div >JTBC Entertainment<br><span style="color:green">YouTube</span> - 2014. 8. 13.</div>
 			</div>
 		</div><!-- video -->
 
