--- a/src/lecture01/index-START.html
+++ b/src/lecture01/index-START.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="style-START.css">
 </head>
 <body>
-
-  <header class = "title">
+  
+  <header>
     <h1>A story about getting lost.</h1>
   </header>
+
 
   <div id="navbar">
     <nav id="main">
