--- a/src/lecture02/index.html
+++ b/src/lecture02/index.html
@@ -11,8 +11,8 @@
 <body>
     <section data-search>
         <form>
-            <input id = "search" type="text" onclick="enterSearch()" onkeydown="myFunction()">
-            <button type="button" onClick="myFunction()">검색</button>
+            <input id="searchBar" type="text">
+            <button id ="search" type="button">검색</button>
         </form>
     </section>
     <section data-movie-person>
