--- a/src/lecture02/index.html
+++ b/src/lecture02/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <section data-search>
-        <form>
-            <input id="searchBar" type="text">
-            <button id ="search" type="button">검색</button>
+        <form data-input-form>
+            <input id="searchInput" type="text">
+            <button id ="searchBtn" type="button">검색</button>
         </form>
     </section>
     <section data-movie-person>
@@ -26,6 +26,6 @@
             <h3>filmos</h3>
         </div>
     </section>
-    <script src="main.js"></script>
+    <script src="main02.js"></script>
 </body>
 </html>
