--- a/src/lecture03/index-START.html
+++ b/src/lecture03/index-START.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -31,66 +33,38 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    const bornInFifteenInventors = inventors.filter(person => (person.year >= 1500 && person.year < 1600))
 
-    console.table(bornInFifteenInventors)
+    // function _filter(arr, condition) {
+    //   const newArr = [];
+    //   for (let i = 0; i < arr.length; i++) {
+    //     if (condition(arr[i])) newArr.push(arr[i]);
+    //   }
+    //   return newArr;
+    // }
+    // console.log(_filter(inventors, (val) => {
+    //   if (val.year >= 1500 && val.year <= 1599) return true;
+    // }));
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-    const fullNames = inventors.map(person => `${person.first} ${person.last}`)
-
-    console.log(fullNames)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-    const invetorsSortedByBirthdate = inventors.sort((prevPerson, nextPerson) => prevPerson.year - nextPerson.year)
-
-    console.table(invetorsSortedByBirthdate)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-    const totalYears = inventors.reduce((accumulator, currentPerson) => {
-      return accumulator + (currentPerson.passed - currentPerson.year)
-    }, 0)
-
-    console.log(totalYears)
 
     // 5. Sort the inventors by years lived
-
-    const invertorsSortedByLivedYears = inventors.sort((prevPerson, nextPerson) => {
-      const livedYearsOfPrevPerson = prevPerson.passed - prevPerson.year
-      const livedYearsOfNextPerson = nextPerson.passed - nextPerson.year
-      return livedYearsOfPrevPerson > livedYearsOfNextPerson ? -1 : 1
-    })
-
-    console.table(invertorsSortedByLivedYears)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-    const peopleSortedByLastName = people.sort((prevPerson, nextPerson) => {
-      const [aLastName, aFirstName] = prevPerson.split(',')
-      const [bLastName, bFirstName] = nextPerson.split(',')
-      return aLastName > bLastName ? 1 : -1
-    })
-
-    console.log(peopleSortedByLastName)
-
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
-    const transportation = data.reduce((obj, item) => {
-      if(!obj[item]) obj[item] = 0
-      obj[item]++
-      return obj
-    }, {})
-
-    console.log(transportation)
   </script>
 </body>
+
 </html>
