--- a/src/lecture04/index.html
+++ b/src/lecture04/index.html
@@ -18,7 +18,9 @@
             <input type="text" autofocus placeholder = "Type your name"></input>
         </div>
            
-        <div data-todo></div>
+        <div data-todo>
+            <input type="text" placeholder = "Write to do" ></input>
+        </div>
 
     </section>
     <script src="main.js"></script>
