--- a/src/lecture04/homework/index-START.html
+++ b/src/lecture04/homework/index-START.html
@@ -60,9 +60,9 @@
 <body>
   <div class="clock">
     <div class="clock-face">
-      <div class="hour-hand" data-hour></div>
-      <div class="minute-hand" data-minute></div>
-      <div class="second-hand" data-second></div>
+      <div class="hand" data-hour></div>
+      <div class="hand" data-minute></div>
+      <div class="hand" data-second></div>
     </div>
   </div>
 
