--- a/src/lecture04/index.html
+++ b/src/lecture04/index.html
@@ -24,9 +24,7 @@
             <input type="text" id="input" placeholder="Write to do"></input>
         </div>
         <div>
-            <ul id="list">
-                <li>밥먹기</li>
-            </ul>
+            <ul id="list"></ul>
         </div>
 
     </section>
