--- a/src/lecture04/homework/index-START.html
+++ b/src/lecture04/homework/index-START.html
@@ -44,7 +44,7 @@
       /* account for the height of the clock hands */
     }
 
-    .hand {
+    /* .hand {
       width: 100%;
       height: 6px;
       background: linear-gradient(to right, black 51%, transparent 49%);
@@ -52,38 +52,37 @@
       top: 50%;
       transition: transform 0.5s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-    }
+    } */
 
-
-
-    #sec-hand {
-      width: 1px;
-      height: 50%;
-      background-color: black;
-      transform-origin: 50% 80%;
-      position: absolute;
-      top: 10%;
-      left: 50%;
-    }
-
-    #min-hand {
-      width: 3px;
-      height: 40%;
-      background-color: blue;
-      transform-origin: 50% 80%;
-      position: absolute;
-      top: 18%;
-      left: calc(50% - 1px);
-    }
-
-    #hr-hand {
-      width: 5px;
-      height: 25%;
-      background-color: red;
-      transform-origin: 50% 80%;
+    .hr-hand {
+      background: #000;
+      height: 20%;
+      left: 48.75%;
       position: absolute;
       top: 30%;
-      left: calc(50% + -2px);
+      transform-origin: 50% 100%;
+      width: 2.5%;
+    }
+
+    .min-hand {
+      background: #000;
+      height: 40%;
+      left: 49%;
+      position: absolute;
+      top: 10%;
+      transform-origin: 50% 100%;
+      width: 2%;
+    }
+
+    .sec-hand {
+      background: red;
+      height: 45%;
+      left: 49.5%;
+      position: absolute;
+      top: 14%;
+      transform-origin: 50% 80%;
+      width: 1%;
+      z-index: 8;
     }
   </style>
 </head>
@@ -92,9 +91,9 @@
   <div id="time"></div><br>
   <div class="clock">
     <div class="clock-face">
-      <div id="hr-hand" data-hour></div>
-      <div id="min-hand" data-minute></div>
-      <div id="sec-hand" data-second></div>
+      <div class="hr-hand" data-hour></div>
+      <div class="min-hand" data-minute></div>
+      <div class="sec-hand" data-second></div>
     </div>
   </div>
 
