--- a/src/lecture04/homework/index-START.html
+++ b/src/lecture04/homework/index-START.html
@@ -65,7 +65,37 @@
       <div class="hand" data-second></div>
     </div>
   </div>
+
   <script>
+    /*
+      [1]시침이 현재 시간에 맞게 가르키도록 한다.
+      [1-1]현재 시간의 시침 각도를 계산해 css: rotator 효과를 준다.
+      [2]분침이 현재 시간에 맞게 가르키도록 한다.
+      [3]초침이 현재 시간에 맞게 가르키도록 한다.
+    */
+    let hoursBar = document.querySelector('.hand[data-hour]')
+    let minutesBar = document.querySelector('.hand[data-minute]')
+    let secondsBar = document.querySelector('.hand[data-second]')
+
+    function setDate() {
+      const currentDate = new Date()
+      const defaultDegree = 90
+
+      let hours = currentDate.getHours()
+      let hoursDegrees = (hours / 12) * 360 + defaultDegree
+      hoursBar.style.transform = `rotate(${hoursDegrees}deg)`
+
+      let minutes = currentDate.getMinutes()
+      let minutesDegrees = (minutes / 60) * 360 + defaultDegree
+      minutesBar.style.transform = `rotate(${minutesDegrees}deg)`
+
+      let seconds = currentDate.getSeconds()
+      let secondsDegrees = (seconds / 60) * 360 + defaultDegree
+      secondsBar.style.transform = `rotate(${secondsDegrees}deg)`
+    }
+
+    setInterval(setDate, 1000)
+
   </script>
 </body>
 
