--- a/src/lecture04/homework/index-START.html
+++ b/src/lecture04/homework/index-START.html
@@ -81,6 +81,7 @@
       position: absolute;
       top: 14%;
       transform-origin: 50% 80%;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
       width: 1%;
       z-index: 8;
     }
