--- a/src/lecture05/index.html
+++ b/src/lecture05/index.html
@@ -13,7 +13,13 @@
 </head>
 
 <body>
+    <ul class="nav">
+        <li class="goods-list">상품목록</li>
+        <li class="shopping-cart">장바구니</li>
+        <li class="order-list">주문목록</li>
+    </ul>
     <header class="title">What You Need</header>
+   
     <section class="goods-contents">
         <ul class="goods-items"></ul>
     </section>
