add nav in shopping cart list

--- a/src/lecture05/index.html
+++ b/src/lecture05/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <ul class="nav">
-        <li class="goods-list" onclick="openCartList()">상품목록</li>
-        <li class="shopping-cart">장바구니</li>
+        <li class="goods-list">상품목록</li>
+        <li class="shopping-cart" onclick="openCartList()">장바구니</li>
         <li class="order-list">주문목록</li>
     </ul>
     <header class="title">What You Need</header>
