--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="shoppingCart.css" />
     <script src="shoppingCart.js"></script>
 </head>
-<body>
 
-        <header class="title">We hope your good shopping!</header>
-        <section class="goods-contentsInCart">
-            <ul class="goods-items"></ul>
-        </section>
+<body>
+    <ul class="nav">
+        <li class="goods-list" onclick="openGoodsList()">상품목록</li>
+        <li class="shopping-cart">장바구니</li>
+        <li class="order-list">주문목록</li>
+    </ul>
+    <header class="title">We hope your good shopping!</header>
+    <section class="goods-contentsInCart">
+        <ul class="goods-items"></ul>
+    </section>
 
 </body>
+
 </html>
