change to  a elements from onclick about rink and change font color in nav bar

--- a/src/lecture05/index.html
+++ b/src/lecture05/index.html
@@ -15,7 +15,8 @@
 <body>
     <ul class="nav">
         <li class="goods-list">상품목록</li>
-        <li class="shopping-cart" onclick="openCartList()">장바구니</li>
+        <a href ="shoppingCart/shoppingCart.html">
+        <li class="shopping-cart" >장바구니</li></a>
         <li class="order-list">주문목록</li>
     </ul>
     <header class="title">What You Need</header>
