--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -12,13 +12,15 @@
 
 <body>
     <ul class="nav">
-        <li class="goods-list" onclick="openGoodsList()">상품목록</li>
+        <a href = "../index.html">
+        <li class="goods-list" >상품목록</li></a>
         <li class="shopping-cart">장바구니</li>
         <li class="order-list">주문목록</li>
     </ul>
     <header class="title">We hope your good shopping!</header>
     <section class="goods-contentsInCart">
         <ul class="goods-items"></ul>
+        <div class="shooping-cart-list">리스트</div>
     </section>
 
 </body>
