add div element for  shopping cart list

--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -17,9 +17,7 @@
         <li class="order-list">주문목록</li>
     </ul>
     <header class="title">We hope your good shopping!</header>
-    <section class="goods-contents">
-        <div class="shopping-cart-list"></div>
-    </section>
+    <div id = "shoppingCartList" ></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="shoppingCart.js"></script>
 </body>
