creat shoppinggoods-contents whenever add cart list

--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -17,7 +17,8 @@
         <li class="order-list">주문목록</li>
     </ul>
     <header class="title">We hope your good shopping!</header>
-    <div id = "shoppingCartList" ></div>
+    <section class = "goods-contents"></section>
+    <!-- <div id = "shoppingCartList" ></div> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="shoppingCart.js"></script>
 </body>
