add grand total

--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -22,7 +22,16 @@
     </ul>
     <header class="title">We hope your good shopping!</header>
     <div class = "goods-contents"></div>
-    <!-- <div id = "shoppingCartList" ></div> -->
+    <div class = "total"></div>
+    <div class = "info">
+        <h3>Enter your Contact Data</h3>
+        <input class="name" type="text"></input>
+        <input class="street" type="text"></input>
+        <input class="zipCode" type="text"></input>
+        <input class="country" type="text"></input>
+        <input class="email" type="text"></input>
+        <button class="order" type="button">ORDER</button>
+    </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="shoppingCart.js"></script>
