add information form

--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -25,11 +25,11 @@
     <div class = "total"></div>
     <div class = "info">
         <h3>Enter your Contact Data</h3>
-        <input class="name" type="text"></input>
-        <input class="street" type="text"></input>
-        <input class="zipCode" type="text"></input>
-        <input class="country" type="text"></input>
-        <input class="email" type="text"></input>
+        <input class="name" type="text" placeholder="Your Name"></input>
+        <input class="street" type="text" placeholder="Street"></input>
+        <input class="zipCode" type="text" placeholder="ZIP Code"></input>
+        <input class="country" type="text" placeholder="Country"></input>
+        <input class="email" type="text" placeholder="Your Email"></input>
         <button class="order" type="button">ORDER</button>
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
