--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -23,7 +23,7 @@
     <header class="title">We hope your good shopping!</header>
     <div class = "goods-contents"></div>
     <div class = "total"></div>
-    <div class = "info">
+    <form class = "info">
         <h3>Enter your Contact Data</h3>
         <input class="name" type="text" placeholder="Your Name"></input>
         <input class="street" type="text" placeholder="Street"></input>
@@ -31,7 +31,7 @@
         <input class="country" type="text" placeholder="Country"></input>
         <input class="email" type="text" placeholder="Your Email"></input>
         <button class="order" type="button">ORDER</button>
-    </div>
+    </form>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="shoppingCart.js"></script>
