add h3 elements in title

--- a/src/lecture05/shoppingCart/shoppingCart.html
+++ b/src/lecture05/shoppingCart/shoppingCart.html
@@ -20,7 +20,9 @@
         <li class="shopping-cart">장바구니</li>
         <li class="order-list">주문목록</li>
     </ul>
-    <header class="title">We hope your good shopping!</header>
+    <header class="title">
+        <h3>We hope your good shopping!</h3>
+    </header>
     <div class = "goods-contents"></div>
     <div class = "total"></div>
     <form class = "info">
