--- a/src/lecture05/index.html
+++ b/src/lecture05/index.html
@@ -21,7 +21,9 @@
         <li class="shopping-cart" >장바구니</li></a>
         <li class="order-list">주문목록</li>
     </ul>
-    <header class="title">What You Need</header>
+    <header class="title">
+        <h3>What You Need</h3>
+    </header>
    
     <section class="goods-contents">
         <ul class="goods-items"></ul>
