--- a/src/lecture05/index.html
+++ b/src/lecture05/index.html
@@ -30,7 +30,7 @@
     </section>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
 </body>
 
 </html>
